--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 name: '✅ Create release'
-description: 'release create action'
+description: 'create'
 author: "milankomaj"
 branding:
   icon: "x-square"
